--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,8 @@
 
 <section class="About">
 	<h2>Обо мне</h2>
+	<div class="line">		
+	</div>
 	<div class="about-im">
 		<img src="img/about_im-1.png" alt="Фото автора проекта">
 	</div>
@@ -52,37 +54,39 @@
 	
 	<section class="Skills">
 		<h2>Что я умею</h2>
-		<div class="skills-wrp">
-			<div class="skill-1">
+		<div class="line">		
+	</div>
+		
+			<div class="skill-box-1">
 				<img src="img/skill-1.svg" alt="image">
 				<h3>Веб-дизайн</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, ut veniam deserunt tenetur amet sit?</p>
 			</div>
 
-			<div class="skill-2">
+			<div class="skill-box">
 				<img src="img/skill-2.svg" alt="image">
 				<h3>Разработка</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, ut veniam deserunt tenetur amet sit?</p>
 			</div>
 
-			<div class="skill-3">
+			<div class="skill-box">
 				<img src="img/skill-3.svg" alt="image">
 				<h3>CEO-оптимизация</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, ut veniam deserunt tenetur amet sit?</p>
 			</div>
 
-			<div class="skill-4">
+			<div class="skill-box">
 				<img src="img/skill_4.svg" alt="image">
 				<h3>Маркетинг</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, ut veniam deserunt tenetur amet sit?</p>
 			</div>
-		</div>
+
 	</section>
 
 	<section class="Cases">
 		<h2>Кейсы</h2>
+		<div class="line">	</div>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, accusamus!</p>
-		<div class="cases_wrp">
 			<div class="cases_img-box">
 				<img src="img/Case-1.jpg" alt="Кейс1">				
 			</div>
@@ -94,14 +98,15 @@
 				</div>
 				<div class="project-description_box">
 					<p><b>Название проекта</b></p>
-					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste, deleniti voluptas voluptatem molestiae, neque nostrum nihil dicta, sint eum accusamus quod. Rerum, cumque ipsum molestias, magni ducimus autem quidem laudantium?</p>
+					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste, deleniti voluptas voluptatem molestiae, neque nostrum nihil dicta, sint eum accusamus quod. Rerum, cumque ipsum molestias, magni ducimus autem quidem laudantium Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste, deleniti voluptas voluptatem molestiae, neque nostrum nihil dicta, sint eum accusamus quod. Rerum, cumque ipsum molestias, magni ducimus autem quidem laudantium</p>
 				</div>
 			</div>
-		</div>
 	</section>
 
 	<section class="Calculation">
 		<h2>Расчет стоимости</h2>
+		<div class="line">		
+	</div>
 		<form action="#">
 			<H4>ТИП САЙТА</H4>
 			<select name="тип сайта" id="type site">
@@ -132,6 +137,8 @@
 
 	<section class="Statistic">
 		<h2>НЕМНОГО СТАТИСТИКИ</h2>
+		<div class="line">		
+	</div>
 		<div class="statistic-wrp">
 			<div class="statistic-box">
 				<img src="img/static-1.svg" alt="смайлик">
@@ -161,6 +168,8 @@
 
 	<section class="Feedback">
 		<h2>ОТЗЫВЫ</h2>
+		<div class="line">		
+	</div>
 		<div class="feedback-wrp">
 			<div class="feedback-im">
 				<img src="img/feedback_1.png" alt="Фото автора отзыва">
@@ -172,6 +181,8 @@
 
 	<section class="Contacts">
 		<h2>МОИ КОНТАКТЫ</h2>
+		<div class="line">		
+	</div>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, dolores.</p>
 		<div class="contacts-wrp">
 			<div class="contact-box">
