--- a/src/index.html
+++ b/src/index.html
@@ -105,11 +105,10 @@
 
 	<section class="Calculation">
 		<h2>Расчет стоимости</h2>
-		<div class="line">		
-	</div>
+		</div>
 		<form action="#">
 			<H4>ТИП САЙТА</H4>
-			<select name="тип сайта" id="type site">
+			<select name="тип сайта" id="type_site">
 				<option value="landing"> Лендинг </option>
 				<option value="corporate multipages"> Корпоративный, многостраничник</option>
 				<option value="catalogue">Сайт-каталог</option>
@@ -130,6 +129,7 @@
 				<option value="desktop">Компьюторная версия</option>
 				<option value="mobile">Под мобильные устройства</option>
 			</select>
+			<div class="line_gray">	</div>
 			<p>Сроки</p>
 			<p>Стоимость</p>
 		</form>
@@ -140,28 +140,28 @@
 		<div class="line">		
 	</div>
 		<div class="statistic-wrp">
-			<div class="statistic-box">
+			<div class="statistic-box_1">
 				<img src="img/static-1.svg" alt="смайлик">
-				<p><b>120</b></p>
-				<p>СЧАСТЛИВЫХ КЛИЕНТОВ</p>
+				<p class="digit">120</p>
+				<p class="a">СЧАСТЛИВЫХ КЛИЕНТОВ</p>
 			</div>
 
 			<div class="statistic-box">
 				<img src="img/static-2.svg" alt="скобочки">
-				<p><b>4,600</b></p>
-				<p>ЧАСОВ РАБОТЫ</p>
+				<p class="digit">4.600</p>
+				<p class="a">ЧАСОВ РАБОТЫ</p>
 			</div>
 
 			<div class="statistic-box">
 				<img src="img/static-3.svg" alt="галочка">
-				<p><b>340</b></p>
-				<p>ПРОЕКТОВ ЗАВЕРШЕНО</p>
+				<p class="digit">340</p>
+				<p class="a">ПРОЕКТОВ ЗАВЕРШЕНО</p>
 			</div>
 
 			<div class="statistic-box">
 				<img src="img/static-4.svg" alt="кубок">
-				<p><b>23</b></p>
-				<p>НАГРАД ПОЛУЧЕНО</p>
+				<p class="digit">23</p>
+				<p class="a">НАГРАД ПОЛУЧЕНО</p>
 			</div>
 		</div>
 	</section>
@@ -174,7 +174,7 @@
 			<div class="feedback-im">
 				<img src="img/feedback_1.png" alt="Фото автора отзыва">
 			</div>
-			<p>Lorem ipsum dolor sit amet consectetur, adipisicing, elit. Dicta ad possimus eaque, voluptate ea necessitatibus?</p>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing, elit. Dicta ad possimus eaque, voluptate ea necessitatibus. Lorem ipsum dolor sit amet consectetur, adipisicing, elit. Dicta ad possimus eaque, voluptateLorem ipsum dolor sit amet consectetur, adipisicing, elit. Dicta ad possimus eaque, voluptate?</p>
 			<p><b>Михаил,</b> Ген.директор ПАО "Газпром"</p>
 		</div>
 	</section>
@@ -184,8 +184,9 @@
 		<div class="line">		
 	</div>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, dolores.</p>
+		
 		<div class="contacts-wrp">
-			<div class="contact-box">
+			<div class="contact-box_1">
 				<div class="contact-icon">
 					<img src="img/contact-1.svg" alt="гео">
 				</div>
