--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
 		<nav>
 			<div class="logo">Андрей Браун</div>
 			<div class="menu"><ul>
-				<li>Обо мне</li>
-				<li>Услуги</li>
-				<li>Кейсы</li>
-				<li>Прайс</li>
-				<li>Отзывы</li>
-				<li>Контакты</li>
+				<li><a href="#">Обо мне</li>
+				<li><a href="#">Услуги</li>
+				<li><a href="#">Кейсы</li>
+				<li><a href="#">Прайс</li>
+				<li><a href="#">Отзывы</li>
+				<li><a href="#">Контакты</li>
 			</ul>
 						</div>
 
@@ -113,6 +113,7 @@
 				<option value="corporate multipages"> Корпоративный, многостраничник</option>
 				<option value="catalogue">Сайт-каталог</option>
 				<option value="on-line_shop">Интернет-магазин</option>
+
 			</select>
 
 			<h4>ДИЗАЙН</h4>
