--- a/src/index.html
+++ b/src/index.html
@@ -212,16 +212,16 @@
 			<h4>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h4>
 			
 			<form action="#">
-				<input type="text" name="text_input" value="" placeholder="Имя">
-				<input type="text" name="email_input" value="" placeholder="Email">
+				<input class="text-field__input" type="text" name="text_input" value="" placeholder="Имя">
+				<input class="text-field__input2" type="text" name="email_input" value="" placeholder="Email">
 				<br><br>
-				<textarea name="message" placeholder="Сообщение"></textarea>
-				<br>
-				<input type="submit">
+				<textarea class="text-field__input3"name="message" placeholder="Сообщение"></textarea>
+				<br><br>
+				<input class="form_submit" type="submit">
 			</form>
 
 			<div class="social-nets_wrp">
-				<div class="social-net_box">
+				<div class="social-net_box1">
 					<img src="img/fb.svg" alt="facebook-logo"> </div>
 				<div class="social-net_box">
 					<img src="img/twitter.svg" alt="facebook-logo"> </div>
@@ -242,7 +242,7 @@
 		</div>
 	</section>
 
-	<footer>
+	<footer class="footer">
 		<p>Copyright © 2021 Андрей Браун. Design by Web</p>
 	</footer>
 	
